@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam classAttributeIconSize 0
hide circle
hide methods

title Domain Model



class VehicleFleetManager {

}




class Vehicle{
    brand
    model
    type
    tare
    grossWeight
    currentKm
    registerDate
    acquisitionDate
    checkupFrequency
    licensePlate
}

class CheckUp{
    date
    km
}





Vehicle "1" -- "*" CheckUp :  does >
VehicleFleetManager "1" -- "1..*" Vehicle : Registers >

@enduml